Loads more updates. Nearly done with the TODO list.

--- a/templates/sdoc2/copy.yml
+++ b/templates/sdoc2/copy.yml
@@ -8,6 +8,7 @@
 # FILES
 - README.md
 - scripts/searchdoc.js
+- scripts/panel.min.js
 - scripts/production.min.js
 - styles/panel.min.css
 - styles/production.min.css
