--- a/templates/sdoc2/copy.yml
+++ b/templates/sdoc2/copy.yml
@@ -7,9 +7,11 @@
 
 # FILES
 - README.md
-- scripts/searchdoc.js
+- scripts/frame-loader.min.js
+- scripts/frameset.min.js
 - scripts/panel.min.js
 - scripts/production.min.js
+- scripts/searchdoc.js
 - styles/panel.min.css
 - styles/production.min.css
 
