Default template should be sdoc2

--- a/_vanity/config.yml
+++ b/_vanity/config.yml
@@ -11,7 +11,7 @@ readme: README.md
 output: ./output
 
 # Default template
-template: ./template/sdoc
+template: sdoc2
 
 # Skip the lexer/tokenizer phase
 skip-lexer: false
