--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,30 @@
 	"config": {
 		"vendor-dir": "src/vendor/"
 	},
+	"repositories": {
+		"docblox": {
+			"package": {
+				"name": "docblox/docblox",
+				"version": "0.18.1",
+				"source": {
+					"url": "git://github.com/docblox/docblox.git",
+					"type": "git",
+					"reference": "v0.18.1"
+				}
+			}
+		},
+		"docblox-parallel": {
+			"package": {
+				"name": "docblox/parallel",
+				"version": "0.0.1",
+				"source": {
+					"url": "git://github.com/docblox/Parallel.git",
+					"type": "git",
+					"reference": "master"
+				}
+			}
+		}
+	},
 	"require": {
 		"php": ">=5.3.2",
 
@@ -30,6 +54,8 @@
 		"ext-json": "*",
 		"ext-pcre": "*",
 
+		"docblox/docblox": "0.18.1",
+		"docblox/parallel": "*",
 		"symfony/class-loader": ">2.0",
 		"symfony/config": ">2.0",
 		"symfony/console": ">2.0",
